# nlp-project

./: .env.example  pyproject.toml  yelp-reviews-project-original.py
src/: __init__.py  config.py  main.py
src/data/: __init__.py  analyzer.py  loader.py
src/evaluation/: __init__.py  evaluator.py  visualizer.py
src/models/: __init__.py  adapters.py  base.py  factory.py  strategies.py
src/pipeline/: __init__.py  steps.py  workflow.py
src/preprocessing/: __init__.py  feature_engineer.py  text_preprocessor.py
src/utils/: __init__.py  reproducibility.py
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_evaluation.py  test_main.py  test_models.py  test_pipeline.py  test_preprocessing.py  test_utils.py
